# qortex-test-assignment

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  fixture.json  pyproject.toml  requirements.txt
.github/workflows/: launch_tests.yml
config/: settings.py  urls.py  yasg.py
github/workflows/: launch_tests.yml
songs/: admin.py  models.py  serializers.py  services.py  urls.py  utils.py  views.py
songs/migrations/: 0001_initial.py
tests/: conftest.py  factories.py
tests/test_endpoints/: test_album.py  test_artist.py  test_song.py
tests/test_services/: test_album.py  test_song.py
